--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
 jdk:
 - oraclejdk8
 script:
-- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.login=$SONAR_TOKEN
+- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.login=$SONAR_TOKEN -Dmaven.test.failure.ignore=true
 cache:
   directories:
   - "$HOME/.m2/repository"
